--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
 
 header {
     text-align:center;
+    letter-spacing: 1rem;
 }
 
 h1 {
@@ -21,13 +22,9 @@ main p {
     text-align:center;
     font-size: large;
     font-family: "Open Sans", sans-serif;
-    border: 1px solid;
+    border: 1px;
     color:black;
     font-size:35px;
-}
-
-#contntest {
-    width: 65.625rem;
 }
 
 h1, h2, h3 {
